--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "remove-accents": "^0.4.2",
     "sass": "^1.32.10",
     "web-vitals": "^1.1.1"
   },
