--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-scripts": "4.0.3",
     "remove-accents": "^0.4.2",
     "sass": "^1.32.10",
+    "styled-components": "^5.2.3",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
