--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "bootstrap": "^5.0.0-beta3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.0",
     "remove-accents": "^0.4.2",
     "sass": "^1.32.10",
     "styled-components": "^5.2.3",
