--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "firebase": "^8.4.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^11.3.2",
     "react-hook-form": "^7.3.0",
     "react-hot-toast": "^1.0.2",
+    "react-rating-stars-component": "^2.2.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
