--- a/package.json
+++ b/package.json
@@ -5,16 +5,16 @@
   "dependencies": {
     "@heroicons/react": "^1.0.1",
     "@hookform/resolvers": "^2.4.0",
-    "@testing-library/jest-dom": "^5.11.10",
-    "@testing-library/react": "^11.2.6",
-    "@testing-library/user-event": "^12.8.3",
-    "bootstrap": "^5.0.0-beta3",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "bootstrap": "^5.0.0",
     "clsx": "^1.1.1",
-    "firebase": "^8.4.2",
+    "firebase": "^8.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.3.2",
-    "react-hook-form": "^7.3.0",
+    "react-hook-form": "^7.4.2",
     "react-hot-toast": "^1.0.2",
     "react-rating-stars-component": "^2.2.0",
     "react-redux": "^7.2.4",
@@ -23,9 +23,9 @@
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
     "remove-accents": "^0.4.2",
-    "sass": "^1.32.10",
-    "styled-components": "^5.2.3",
-    "web-vitals": "^1.1.1",
+    "sass": "^1.32.12",
+    "styled-components": "^5.3.0",
+    "web-vitals": "^1.0.1",
     "yup": "^0.32.9"
   },
   "scripts": {
