--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "clsx": "^1.1.1",
     "firebase": "^8.5.0",
     "react": "^17.0.2",
+    "react-calendar": "^3.4.0",
+    "react-date-picker": "^8.1.1",
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.3.2",
     "react-hook-form": "^7.4.2",
@@ -20,6 +22,7 @@
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-select": "^4.3.0",
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
     "remove-accents": "^0.4.2",
