--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^12.1.10",
     "autosize": "^4.0.2",
     "bootstrap": "^5.0.0",
+    "cloudinary-react": "^1.7.0",
     "clsx": "^1.1.1",
     "firebase": "^8.5.0",
     "react": "^17.0.2",
