--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "bootstrap": "^5.0.0",
     "cloudinary-react": "^1.7.0",
     "clsx": "^1.1.1",
+    "date-fns": "^2.21.3",
     "firebase": "^8.5.0",
     "react": "^17.0.2",
-    "react-calendar": "^3.4.0",
-    "react-date-picker": "^8.1.1",
+    "react-datepicker": "^3.8.0",
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.3.2",
     "react-hook-form": "^7.4.2",
