Resultados view and ResCard format

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-hook-form": "^7.4.2",
     "react-hot-toast": "^1.0.2",
     "react-images-upload": "^1.2.8",
+    "react-number-format": "^4.5.5",
     "react-rating-stars-component": "^2.2.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
