--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "remove-accents": "^0.4.2",
     "sass": "^1.32.12",
     "styled-components": "^5.3.0",
+    "sweetalert2": "^11.0.0",
     "web-vitals": "^1.0.1",
     "yup": "^0.32.9"
   },
