--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "autosize": "^4.0.2",
+    "axios": "^0.21.1",
     "bootstrap": "^5.0.0",
     "cloudinary-react": "^1.7.0",
     "clsx": "^1.1.1",
