--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clsx": "^1.1.1",
     "date-fns": "^2.21.3",
     "firebase": "^8.5.0",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-datepicker": "^3.8.0",
     "react-dom": "^17.0.2",
