--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-hook-form": "^7.4.2",
     "react-hot-toast": "^1.0.2",
     "react-images-upload": "^1.2.8",
+    "react-modal": "^3.13.1",
     "react-number-format": "^4.5.5",
     "react-rating-stars-component": "^2.2.0",
     "react-redux": "^7.2.4",
