refactor: improve service requests modal, add custom scrollbars
- improve datepicker styles

--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "autosize": "^4.0.2",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.1",
-    "cloudinary-react": "^1.7.0",
     "clsx": "^1.1.1",
     "date-fns": "^2.21.3",
     "firebase": "^8.5.0",
     "lodash": "^4.17.21",
+    "overlayscrollbars": "^1.13.1",
+    "overlayscrollbars-react": "^0.2.2",
     "react": "^17.0.2",
     "react-datepicker": "^3.8.0",
     "react-dom": "^17.0.2",
@@ -27,6 +28,7 @@
     "react-number-format": "^4.5.5",
     "react-rating-stars-component": "^2.2.0",
     "react-redux": "^7.2.4",
+    "react-responsive": "^8.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-select": "^4.3.0",
