--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "overlayscrollbars": "^1.13.1",
     "overlayscrollbars-react": "^0.2.2",
     "react": "^17.0.2",
+    "react-clamp-lines": "^3.0.2",
     "react-datepicker": "^3.8.0",
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.3.2",
