--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-responsive": "^8.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-scroll-to-bottom": "^4.1.2",
     "react-select": "^4.3.0",
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
