--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -38,9 +38,9 @@ jobs:
         with:
           node-version: 14
       - name: Install dependencies
-        run: npm install
+        run: yarn install
       - name: Build
-        run: npm run build
+        run: yarn build
       - name: Generate 200.html
         run: cp build/index.html build/200.html
       - name: Deploy to uwork.surge.sh
